--- a/scss/base/_typos.scss
+++ b/scss/base/_typos.scss
@@ -24,7 +24,47 @@ h1, h2, h3, h4, h5, h6 {
 	line-height: 21px;
 }
 
+.section-menu {
+	.tt-h1 {
+		font-family: $title-font;
+		font-size: 28px;
+		font-weight: 400;
+		line-height: 40px;
+	}
+
+	.tt-h2 {
+		font-size: $font-size-base;
+		font-weight: 300;
+		text-transform: uppercase;
+		line-height: 19px;
+
+		&::after {
+			content: '';
+			width: 40px;
+			height: 3px;
+			margin-top: 6px;
+			background-color: $bg-sticker-color;
+			display: block;
+		}
+	}
+
+	.tt-h3 {
+		font-weight: 500;
+	}
+}
+
 // paragraphes
+.paragraph {
+	font-size: $font-size-mid;
+	font-weight: 300;
+	line-height: 20px;
+
+	.section-menu & {
+		font-size: $font-size-small;
+		line-height: 18px;
+	}
+}
+
 .chapo {
 	font-size: $font-size-big;
 	font-weight: 300;
