--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -12,11 +12,8 @@
     .texte {
         padding: 16px 13px;
 
-        .lieu {
+        .paragraph {
             margin-top: 5px;
-            font-size: $font-size-mid;
-            font-weight: 300;
-            line-height: 20px;
         }
     }
 
