--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,7 +3,20 @@
 
     &-top {
         @extend .d-flex-center-center;
+        position: relative;
         height: 63px;
+    }
+
+    .link {
+        position: absolute;
+        top: 21px;
+        left: 23px;
+
+        &-back {
+            display: flex;
+            font-size: 22px;
+            color: $text-alt-color;
+        }
     }
 
     &-logo {
