--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,7 +20,8 @@
 @import
   'components/button', 
   'components/card', 
-  'components/like';
+  'components/like', 
+  'components/selection';
 
 // 5. Page-specific styles
 @import
