--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,7 +484,7 @@ a.card {
   border-radius: 20px;
   font-weight: 500;
 }
-.section-steps .steps-list .step-item:not(:first-child) {
+.section-steps .steps-list .step-item + .step-item {
   margin-top: 25px;
 }
 .section-steps .steps-list .step-item::before {
@@ -536,7 +536,7 @@ a.card {
     flex-grow: 1;
     max-width: 322px;
   }
-  .section-steps .steps-list .step-item:not(:first-child) {
+  .section-steps .steps-list .step-item + .step-item {
     margin: 0 0 0 37px;
   }
 }
@@ -574,14 +574,14 @@ a.card {
     gap: 30px;
     margin-top: 28px;
   }
-  .section-restaurants .list-restaurants .card + .card {
-    margin: 0;
-  }
   .section-restaurants .list-restaurants .card {
     flex-grow: 1;
     flex-basis: 0;
     min-width: 45%;
     max-width: 490px;
+  }
+  .section-restaurants .list-restaurants .card + .card {
+    margin: 0;
   }
   .section-restaurants .list-restaurants .sticker {
     right: 17px;
@@ -593,26 +593,78 @@ a.card {
   }
 }
 
+@keyframes show-card {
+  0% {
+    transform: translateY(-60px);
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 .section-menu .visuel {
   height: 275px;
 }
 .section-menu .box-bg {
   position: relative;
-  margin-top: -32px;
-  padding: 33px 0 40px;
+  margin-top: -55px;
+  padding: 32px 0 40px;
   background-color: #F6F6F6;
   border-radius: 40px 40px 0 0;
   text-align: left;
 }
+.section-menu .fav {
+  position: absolute;
+  top: 6px;
+  right: 40px;
+}
 .section-menu .menu-part {
+  padding-top: 27px;
+}
+.section-menu .menu-part + .menu-part {
   padding-top: 40px;
 }
 .section-menu .menu-part .card {
   margin-top: 12px;
+  overflow: hidden;
+  transform: translateY(-69px);
+  opacity: 0;
+  animation: show-card 1200ms forwards;
+}
+.section-menu .menu-part .card.show-1:nth-child(1) {
+  animation-delay: 400ms;
+}
+.section-menu .menu-part .card.show-1:nth-child(2) {
+  animation-delay: 800ms;
+}
+.section-menu .menu-part .card.show-1:nth-child(3) {
+  animation-delay: 1200ms;
+}
+.section-menu .menu-part .card.show-2:nth-child(1) {
+  animation-delay: 1960ms;
+}
+.section-menu .menu-part .card.show-2:nth-child(2) {
+  animation-delay: 2360ms;
+}
+.section-menu .menu-part .card.show-2:nth-child(3) {
+  animation-delay: 2760ms;
+}
+.section-menu .menu-part .card.show-3:nth-child(1) {
+  animation-delay: 3520ms;
+}
+.section-menu .menu-part .card.show-3:nth-child(2) {
+  animation-delay: 3920ms;
+}
+.section-menu .menu-part .card.show-3:nth-child(3) {
+  animation-delay: 4320ms;
 }
 .section-menu .menu-part .plate {
   flex-grow: 1;
-  padding: 12px 15px;
+  padding: 12px 0 12px 15px;
   overflow: hidden;
 }
 .section-menu .menu-part .plate .tt-h3,
@@ -625,7 +677,7 @@ a.card {
   margin-top: 5px;
 }
 .section-menu .menu-part .price {
-  padding: 12px 15px;
+  padding: 12px 15px 12px 10px;
   font-size: 15px;
   color: #353535;
   font-weight: 700;
