--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -44,7 +44,7 @@
             border-radius: 20px;
             font-weight: 500;
 
-            &:not(:first-child) {
+            & + .step-item {
                 margin-top: 25px;
             }
 
@@ -112,7 +112,7 @@
                 flex-grow: 1;
                 max-width: 322px;
     
-                &:not(:first-child) {
+                & + .step-item {
                     margin: 0 0 0 37px;
                 }
             }
@@ -149,16 +149,16 @@
             justify-content: space-between;
             gap: 30px;
             margin-top: 28px;
-    
-            .card + .card {
-                margin: 0;
-            }
 
             .card {
                 flex-grow: 1;
                 flex-basis: 0;
                 min-width: 45%;
                 max-width: 490px;
+
+                & + .card {
+                    margin: 0;
+                }
             }
     
             .sticker {
