--- a/scss/pages/_restaurants.scss
+++ b/scss/pages/_restaurants.scss
@@ -1,3 +1,21 @@
+$num-cards: 3;
+$anim-dur: 1200ms;
+$anim-delay: $anim-dur / $num-cards;
+
+@keyframes show-card {
+    0% {
+        transform: translateY(-60px);
+        opacity: 0;
+    }
+    50% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
 .section-menu {
     .visuel {
         height: 275px;
@@ -5,24 +23,50 @@
 
     .box-bg {
         position: relative;
-        margin-top: -32px;
-        padding: 33px 0 40px;
+        margin-top: -55px;
+        padding: 32px 0 40px;
         background-color: $bg-color;
         border-radius: 40px 40px 0 0;
         text-align: left;
     }
 
+    .fav {
+        position: absolute;
+        top: 6px;
+        right: 40px;
+    }
+
     .menu-part {
-        padding-top: 40px;
+        padding-top: 27px;
+
+        & + .menu-part {
+            padding-top: 40px;
+        }
 
         .card {
             @extend .d-flex-bot-btw;
             margin-top: 12px;
+            overflow: hidden;
+            transform: translateY(-69px);
+            opacity: 0;
+            animation: show-card $anim-dur forwards;
+
+            &.show-1 {
+                @include animation-mixin($anim-delay);
+            }
+
+            &.show-2 {
+                @include animation-mixin($anim-delay, $anim-dur * 1.3);
+            }
+
+            &.show-3 {
+                @include animation-mixin($anim-delay, $anim-dur * 2.6);
+            }
         }
 
         .plate {
             flex-grow: 1;
-            padding: 12px 15px;
+            padding: 12px 0 12px 15px;
             overflow: hidden;
 
             .tt-h3, 
@@ -36,7 +80,7 @@
         }
 
         .price {
-            padding: 12px 15px;
+            padding: 12px 15px 12px 10px;
             font-size: $font-size-small;
             color: $text-alt-color;
             font-weight: 700;
