--- a/scss/pages/_restaurants.scss
+++ b/scss/pages/_restaurants.scss
@@ -1,6 +1,6 @@
 $num-cards: 3;
 $anim-dur: 1200ms;
-$anim-delay: $anim-dur / $num-cards;
+$anim-delay: calc($anim-dur / $num-cards);
 
 @keyframes show-card {
     0% {
@@ -30,10 +30,9 @@ $anim-delay: $anim-dur / $num-cards;
         text-align: left;
     }
 
-    .fav {
-        position: absolute;
-        top: 6px;
-        right: 40px;
+    .menu-top {
+        @extend .d-flex-center-btw;
+        padding-right: 23px;
     }
 
     .menu-part {
@@ -49,18 +48,18 @@ $anim-delay: $anim-dur / $num-cards;
             overflow: hidden;
             transform: translateY(-69px);
             opacity: 0;
-            animation: show-card $anim-dur forwards;
+            animation: show-card $anim-dur ease-out forwards;
 
             &.show-1 {
                 @include animation-mixin($anim-delay);
             }
 
             &.show-2 {
-                @include animation-mixin($anim-delay, $anim-dur * 1.3);
+                @include animation-mixin($anim-delay, $anim-dur * 1.2);
             }
 
             &.show-3 {
-                @include animation-mixin($anim-delay, $anim-dur * 2.6);
+                @include animation-mixin($anim-delay, $anim-dur * 2.4);
             }
         }
 
@@ -91,5 +90,37 @@ $anim-delay: $anim-dur / $num-cards;
     .cta {
         margin-top: 40px;
         text-align: center;
+    }
+
+    @include md {
+        .box-bg {
+            width: 73.3%;
+            max-width: 1055px;
+            margin: -40px auto 0;
+            padding-top: 51px;
+        }
+
+        .container {
+            padding: 0 20%;
+        }
+
+        .menu-top {
+            justify-content: center;
+            padding-right: 0;
+
+            .fav {
+                margin-left: 24px;
+            }
+        }
+
+        .menu-part {
+            padding-top: 40px;
+        }
+    }
+
+    @include lg {
+        .visuel {
+            height: 383px;
+        }
     }
 }
