--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,7 +21,8 @@
   'components/button', 
   'components/card', 
   'components/like', 
-  'components/selection';
+  'components/selection', 
+  'components/loader';
 
 // 5. Page-specific styles
 @import
